# Sock

./: CMakeLists.txt  README.md
src/Sock/: CMakeLists.txt  Parse.cpp  Parse.h
src/Sock/Platform_Impl/: CMakeLists.txt
src/Sock/Platform_Impl/Windows/Socket/: Socket.cpp
src/Sock/Socket/: Socket.h
